# hongdown

./: .gitignore  .hongdown.toml  AGENTS.md  CHANGES.md  Cargo.toml  README.md  SPEC.md  STYLE.md  build.rs  flake.nix  mise.toml  pnpm-lock.yaml
.claude/skills/release/: SKILL.md
.github/workflows/: main.yaml
data/: proper-nouns.tsv
demo/: README.md  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
demo/src/: App.tsx  index.tsx  sample.md  sample.ts  styles.css
demo/src/components/: Inputs.tsx  Options.tsx  TabBar.tsx
nix/: hongdown.nix
src/: config.rs  lib.rs  main.rs  serializer.rs  wasm.rs
src/serializer/: block.rs  code.rs  document.rs  formatter.rs  heading.rs  inline.rs  link.rs  list.rs  mod.rs  punctuation.rs  state.rs  tests.rs  wrap.rs
tests/: integration.rs
