[package]
name = "hongdown"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A Markdown formatter that enforces Hong Minhee's Markdown style conventions"
repository = "https://github.com/dahlia/hongdown"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
comrak = "0.49.0"
