[package]
name = "hongdown"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A Markdown formatter that enforces Hong Minhee's Markdown style conventions"
repository = "https://github.com/dahlia/hongdown"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
comrak = "0.49.0"
glob = "0.3.3"
indexmap = "2.12.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
similar = "2.7.0"
toml = "0.9.10"

[dev-dependencies]
tempfile = "3.24.0"
